RESOLVED FIXED66471
[GTK] [WK2] Activating sub menus cause the WebProcess to crash
https://bugs.webkit.org/show_bug.cgi?id=66471
Summary [GTK] [WK2] Activating sub menus cause the WebProcess to crash
Amruth Raj
Reported 2011-08-18 08:45:20 PDT
Context menu items which are actionable should only connect to activate signal. Connecting sub-menu item to "activate" signal would trigger sending of DidSelectItemFromActiveContextMenu to WebProcess. WebProcess then assumes that a click has happened and destroys the context menu, further leading to a crash.
Attachments
Fix submenu activation crash in WebKit2 GTK (1.48 KB, patch)
2011-08-18 08:48 PDT, Amruth Raj
no flags
Amruth Raj
Comment 1 2011-08-18 08:48:26 PDT
Created attachment 104348 [details] Fix submenu activation crash in WebKit2 GTK
WebKit Review Bot
Comment 2 2011-08-18 11:49:34 PDT
Comment on attachment 104348 [details] Fix submenu activation crash in WebKit2 GTK Clearing flags on attachment: 104348 Committed r93327: <http://trac.webkit.org/changeset/93327>
WebKit Review Bot
Comment 3 2011-08-18 11:49:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.