[GTK] [WK2] Activating sub menus cause the WebProcess to crash https://bugs.webkit.org/show_bug.cgi?id=66471

Patch by Amruth Raj <amruthraj@motorola.com> on 2011-08-18
Reviewed by Anders Carlsson.

* UIProcess/gtk/WebContextMenuProxyGtk.cpp:
(WebKit::WebContextMenuProxyGtk::createGtkMenu):

Canonical link: https://commits.webkit.org/82323@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93327 268f45cc-cd09-0410-ab3c-d52691b4dbfc